# Dise-o-mecatr-nico-Dise-o-de-un-sistema-hardware-in-the-loop-para-un-Robot-manipulador-serial-RR

./: .gitmodules  README.md
Archivos PCB/Archivos de fabricacion/: test_Final-B_Cu.gbl  test_Final-B_Mask.gbs  test_Final-B_Paste.gbp  test_Final-B_Silkscreen.gbo  test_Final-Edge_Cuts.gm1  test_Final-F_Cu.gtl  test_Final-F_Mask.gts  test_Final-F_Paste.gtp  test_Final-F_Silkscreen.gto  test_Final-NPTH.drl  test_Final-PTH.drl  test_Final-job.gbrjob
Archivos PCB/PCB Kikad/: test_Final.kicad_pcb  test_Final.kicad_prl  test_Final.kicad_pro
Arduino/: robot.ino
Calculo de cinemática directa e inversa/: Inversa.m
Estructura/SolidWorks/: Apoyo Motor.SLDPRT  DM37D Motor.SLDASM  DMAngulo.SLDPRT  DMApoyo V2.1.SLDPRT  DMApoyo V2.SLDPRT  DMArm Base.SLDPRT  DMBone 2.SLDPRT  DMDouble Cople.SLDPRT  DMEncoder Hall Effect Sensor.SLDPRT  DMEncoder PCB Assy.SLDASM  DMEncoder Spindle.SLDPRT  DMEncoder.SLDASM  DMGear Shaft.SLDPRT  DMLamina Gripper.SLDPRT  DMMotorshaft.SLDPRT  DMPieza2.SLDPRT  End Effector.SLDPRT  End Effector2.SLDPRT  Ensamblaje Estructura.SLDASM  Ensamblaje1.1.SLDASM  Ensamblaje_Final.SLDASM  Ensamble1.SLDASM  Partegod1.SLDPRT
Estructura/SolidWorks/Parte 2/: DM37D Body.SLDPRT  DM37D Motor.SLDASM  DMApoyo Motor1.1.SLDPRT  DMEncoder Magnet.SLDPRT  DMEncoder PCB.SLDPRT  DMEncoder Terminal.SLDPRT  DMEncoder.SLDASM  DMMotor Cople.SLDPRT  Ensamblaje5.SLDASM  dsas.SLDPRT  pieza2.SLDPRT
Estructura/SolidWorks/Parte3/: parte3.SLDPRT  (+6 more)
my_robot_planar/: package.xml  setup.cfg  setup.py
my_robot_planar/launch/: display.launch.py  gazebo_launch.py
my_robot_planar/meshes/: End_effctor_Link.STL  Motor1_Link.STL  Motor2_Link.STL  base_link.STL
my_robot_planar/my_robot_planar/: real_to_sim.py  sim_to_real.py
my_robot_planar/urdf/: mi_mundo.sdf  robot.urdf  robot_con_plugin.sdf
uros_ws/install/: local_setup.sh  setup.sh
uros_ws/log/: latest_build
(+10 files in other folders)
