<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_planar</name>
  <version>0.0.0</version>
  <description>Paquete que contiene el robot planar y su simulación en Gazebo Harmonic</description>
  <maintainer email="chiva@todo.todo">chiva</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias principales -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>  <!-- Cambiado a rviz2 -->
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <!-- Dependencias para control y simulación -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>  <!-- Necesario para los controladores -->
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>    <!-- Para el puente ROS-Gazebo -->

  <!-- Dependencias para el nodo suscriptor (Python) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>      <!-- Para joint_states -->

  <!-- Dependencias para pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>